Add support for playlist endpoint.
